--- a/app/Resources/views/includes/modals.html.twig
+++ b/app/Resources/views/includes/modals.html.twig
@@ -1,416 +1,13 @@
 <!-- Modal photos  -->
-<div class="modal fade" id="modal_photos" tabindex="-1" role="dialog" aria-labelledby="modal_photosLabel" aria-hidden="true">
+<div class="modal fade modal_for_photo" id="modal_photos" tabindex="-1" role="dialog" aria-labelledby="modal_photosLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-      </div>
       <div class="modal-body">
+        <!-- <button type="button" class="close float-right"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button> -->
         <!-- Indicators -->
-        <img src="" alt="Photo" class="carousel_photo" id="photo_in_carousel_toReplace"/>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-<!-- Modal mentions légales  -->
-<div class="modal bs-example-modal-lg fade" id="legalMentions" tabindex="-1" role="dialog" aria-labelledby="legalMentionsLabel" aria-hidden="true" data-backdrop="static" data-keyboard="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close white" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h2 class="modal-title center" id="legalMentionsLabel">
-          Status de l'association
-        </h2>
-      </div>
-      <div class="modal-body">
-        <div class="right">
-          Cusco, Lundi 17 Août 2015
-        </div>
-
-        <h3 class="center">
-          Titre 1 : But
-        </h3>
-        <h4 class="left">
-          Article 1
-        </h4>
-        <p class="left">
-          L'association dite "Mission Andina" a été fondée en France en 2013 sous la même appellation. Déclarée en préfecture de Police de Paris en 2014, elle a tout de suite adopté sa nomination actuelle.
-        </p>
-        <br/>
-        <h4 class="left">
-          Article 2 - Durée
-        </h4>
-        <p class="left">
-          La durée de l'assocation est illimitée.
-        </p>
-        <br/>
-        <h4 class="left">
-          Article 3 - But
-        </h4>
-        <p class="left">
-          L'assocation a pour but de venir en aide aux jeunes originaires du Sud-Est asiatique et à leur famille, particulièrement à ceux qui sont en dessous du seuil de pauvreté. Elle s'attache notamment à leur apporter un soutien moral et matériel, ainsi qu'à faciliter ensuite leur intégration dans la société d'aujourd'hui. Elle s'efforce aussi de participer à la scolarisation et l'avancée personnelle de chacun des bénéficiaires. 
-          <br/>
-          Elle a son siège social à Paris, mais il peut être transféré par décision du conseil d'administration.
-        </p>
-        <br/>
-        <h4 class="left">
-          Article 4 - Moyens
-        </h4>
-        <p class="left">
-          L'oeuvre d'entraide, totalement apolitique, que s'est assigné l'association est menée à bien grâce au dévouement de ses adhérents dont l'action est coordonnée et animée par les délégués locaux.
-          <br/>
-          Le site internet www.missionandina.org regroupe les informations utiles à l'assocation, et retrace ainsi les parcours parfois difficiles des bénéficiaires. Il cite notamment les projets auxquels des donateurs peuvent participer directement.
-          <br/>
-          L'assocation peut disposer de foyers d'accueil.
-        </p>
-
-        <br/>
-
-        <h3 class="center">
-          Titre 2 : Membres de l'association
-        </h3>
-        <h4 class="left">
-          Article 5 - Membres
-        </h4>
-        <p class="left">
-          L'association se compose de membres adhérents, de membres bienfaiteurs ainsi que de membres d'honneur.
-          <br/>
-          Des personnes morales légalement constituées peuvent être admises également comme membres.
-        </p>
-        <br/>
-        <h4 class="left">
-          Article 6 - Cotisations
-        </h4>
-        <p class="left">
-          Le montant des cotisations est fixé par le conseil d'administration.
-          <br/>
-          Le titre de membre d'honneur peut être décerné par le conseil d'administration aux personnes qui rendent ou qui ont rendus des services signalés à l'association.
-          <br/>
-          Ce titre confère aux personnes qui l'ont obtenu le droit de faire partie de l'assemblée générale, nonobstant toute autre procédure d'admission, sans être tenues de payer une cotisatoin.
-          <br/>
-          Les modalités de règlement des cotisations sont fixées par le règlement intérieur.
-        </p>
-        <br/>
-        <h4 class="left">
-          Article 7 - Démission - Exclusion - Décès 
-        </h4>
-        <p class="left">
-          La qualité de membre de l'assocation se perd :
-          <ul>
-            <li>
-              par la démission,
-            </li>
-            <li>
-              par la radiation pour non-paiement de la cotisation ou pour motifs graves,
-            </li>
-            <li>
-              en cas de décès, les héritiers et ayant droit n'acquièrent pas de plein droit la qualité de membres.
-            </li>
-          </ul>
-        </p>
-        <br/>
-        <h4 class="left">
-          Article 8 - Responsabilité des administrateurs et des sociétaires
-        </h4>
-        <p class="left">
-          Le patrimoine de l'association répond seul des engagements contractés en son nom, sans qu'aucun des sociétaires ou administrateurs ne puisse être personnellement responsable de ces engagements.
-        </p>
-
-
-        <br/>
-
-        <h3 class="center">
-          Titre 3 : Administration
-        </h3>
-        <h4 class="left">
-          Article 9 - Conseil d'administration
-        </h4>
-        <p class="left">
-          L'association est administrée par un conseil. Ses membres élus, au scrutin direct, pour 5 années par l'assemblée générale selon la procédure prévue au règlement intérieur.
-          <br/>
-          Tout administrateur sortant est rééligible.
-        </p>
-        <br/>
-        <h4 class="left">
-          Article 10 - Vacances
-        </h4>
-        <p class="left">
-          En cas de vacances, le conseil pourvoit provisoirement au remplacement de ses membres. Il est procédé à leur remplacement définitif par la plus prochaine assemblée. Les fonctions de membres ainsi élus prennent fin à l'époque où devrait normalement expirer le mandat des membres remplacés.
-          <br/>
-          A défaut de ratification, les délibérations et les actes accomplis par le conseil d'administration depuis la nomination provisoire n'en demeurent pas moins valables.
-        </p>
-        <br/>
-        <h4 class="left">
-          Article 11 - Bureau du conseil
-        </h4>
-        <p class="left">
-          Le conseil élit en son sein pour cinq années, au scrutin secret, un président. Celui-ci peut désigner un vice-président, un secrétaire général, un sécrétaire général adjoint, un trésorier et trésorier adjoint, pour une durée d'une année renouvelable par tacite reconduction pendant une période de cinq années.
-          <br/>
-          Une année s'entend de la période entre eux assemblées générales ordinaires.
-          <br/>
-          Ces fonctions cessent avec celles de membre du conseil.
-        </p>
-        <br/>
-        <h4 class="left">
-          Article 12 - Pouvoirs
-        </h4>
-        <p class="left">
-          Le président du conseil représente l'assocation dans tous les actes de la vie civile. Il ordonnance les dépenses. Il peut donner délégation dans des conditions qui sont fixées par le règlement intérieur. En cas de représentation en justice, le président ne peut être remplacé que par un mandataire agissant en vertu d'une procuration spéciale.
-        </p>
-        <br/>
-        <h4 class="left">
-          Article 13 - Réunions et délibérations du conseil
-        </h4>
-        <p class="left">
-          <ul>
-            <li>
-              Le conseil se réunit au moins deux fois par an et à chaque fois qu'il est convoqué par son président.
-            </li>
-            <li>
-              Les modalités de convocation et de fixation de l'ordre du jour sont réglées par le règlement intérieur.
-            </li>
-            <li>
-              Les délibérations sont prises à la majorité des voix des membres présents ou représentés. En cas de partage, celle du président est prépondérante.
-            </li>
-            <li>
-              Les délibérations du conseil sont constatées par des procès-verbaux signés par le président ou par le secrétaire général ou, à défaut par un autre membre du bureau.
-            </li>
-          </ul>
-        </p>
-        <br/>
-        <h4 class="left">
-          Article 14 - Rétribution
-        </h4>
-        <p class="left">
-          Les membres du conseil d'administration ne peuvent recevoir aucune rétribution en raison des fonctions qui leur sont confiées. Des remboursements de frais sont seuls possibles. Ils doivent faire l'objet d'une décision expresse du conseil d'administration statuant hors de la présence des intéressés ; des justifications doivent être produites qui font l'objet de vérifications.
-          <br/>
-          Les agents rétribués de l'association peuvent être appelés par le président à assister, avec voix consultative, aux séances de l'assemblée générale et du conseil d'administration.
-        </p>
-
-        <h3 class="center">
-          Titre 4 : Assemblées générales
-        </h3>
-        <h4 class="left">
-          Article 15 - Composition
-        </h4>
-        <p class="left">
-          Sont membres de l'assemblé générale les sociétaires ayant été agréés par le conseil.
-          <br/>
-          Les administrateurs en sont membres.
-        </p>
-        <br/>
-        <h4 class="left">
-          Article 16 - Réunions
-        </h4>
-        <p class="left">
-          L'assemblée générale se réunit au moins une fois par année et chaque fois qu'elle est convoquée par le conseil d'administration.
-          <br/>
-          Les modalités de convocation et de fixation de l'ordre du jour sont réglées par le règlement intérieur.
-        </p>
-        <br/>
-        <h4 class="left">
-          Article 17 - Bureau de l'assemblée
-        </h4>
-        <p class="left">
-          L'assemblée est présidée par le président du conseil d'administration ou à défaut par le vice-président ou encore par tout membre de l'assemblée désigné à cet effet par le président.
-        </p>
-        <br/>
-        <h4 class="left">
-          Article 18 - Nombre de voix
-        </h4>
-        <p class="left">
-          Chaque membre de l'assemblée a droit à une voix, et à autant de voix supplémentaires qu'il représente d'autres membres.
-        </p>
-        <br/>
-        <h4 class="left">
-          Article 19 - Délibérations
-        </h4>
-        <p class="left">
-          L'assemblée approuve par vote les rapports sur la gestion du conseil d'administration, sur la situation financière et morale de l'association.
-          <br/>
-          Elle ne délibère que sur les questions mises à l'ordre du jour et ratifie, s'il y a lieu, le renouvellement des membres du conseil d'administration.
-          <br/>
-          Les délibérations sont prises à la majorité des voix des membres présents ou représentés.
-        </p>
-        <br/>
-        <h4 class="left">
-          Article 20 - Modification des statuts
-        </h4>
-        <p class="left">
-          Les status peuvent être modifiés par l'assemblée générale sur la proposition du conseil d'administration.
-          <br/>
-          Les propositions de modification sont inscrites à l'ordre du jour publié sur le site internet au moins huit jours avant la tenue de l'assemblée.
-          <br/>
-          Les statuts ne peuvent être modifiés qu'à la majorité des membres présents ou représentés.
-        </p>
-        <br/>
-        <h4 class="left">
-          Article 21 - Procès-verbaux
-        </h4>
-        <p class="left">
-          Les délibérations de l'assemblée sont constatées par des procès-verbaux signés par le président ou le secrétaire générale ou, à défaut par un autre membre du bureau.
-        </p>
-        <br/>
-        <h4 class="left">
-          Article 22 - Etablissements et délégations
-        </h4>
-        <p class="left">
-          Les règles d'organisation et de fonctionnement des délégations et établissements de l'association sont fixés par le règlement intérieur.
-        </p>
-        <br/>
-        <h4 class="left">
-          Article 22 bis
-        </h4>
-        <p class="left">
-          L'association s'engage à présenter ses registres et pièces de comptabilité sur toute réquisition du ministre de l'Intérieur ou préfet, en ce qui concerne l'emploi des libérabilités qu'elle serait autorisée à recevoir, et à adresser au préfet un rapport annuel sur sa situation et ses comptes, y compris ceux des délégations, ainsi qu'à laisser visiter ses établissements par les délégués des ministres compétents et à lui rendre compte du fonctionnement desdits établissements.
-        </p>
-
-        <br/>
-        <h3 class="center">
-          Titre 5 : Ressources de l'association
-        </h3>
-        <h4 class="left">
-          Article 23 - Ressources
-        </h4>
-        <p class="left">
-          Les ressources de l'association se composent notamment :  
-          <ul>
-            <li>
-              du revenu de ses biens,
-            </li>
-            <li>
-              des cotisations et souscriptions de ses membres,
-            </li>
-            <li>
-              des subventions éventuelles de l'Etat, des départements et des établissements publics,
-            </li>
-            <li>
-              du produit des libéralités dont l'emploi est autorisé au cours de l'exercice,
-            </li>
-            <li>
-              des ressources créées à titre exceptionnel et, s'il y a lieu, avec l'agrément de l'autorité compétente,
-            </li>
-            <li>
-              du produit des rétributions perçues pour service rendu,
-            </li>
-            <li>
-              de dons et legs conformément à la loi du 23 Juillet 1987
-            </li>
-          </ul>
-        </p>
-        <br/>
-        <h4 class="left">
-          Article 24 - Comptabilité
-        </h4>
-        <p class="left">
-          Il est tenu une comptabilité faisant apparaître annuellement le compte des résultats et un bilan. Chaque établissement de l'association doit tenir une compatibilité conformément au règlement intérieur.
-        </p>
-
-        <br/>
-        <h3 class="center">
-          Titre 6 : Surveillance et règlement intérieur
-        </h3>
-        <h4 class="left">
-          Article 25 - Déclaration
-        </h4>
-        <p class="left">
-          Le président, ou tout autre personne désignée à cet effet, doit faire connaître dans les trois mois à la préfecture du département ou à la sous-préfecture de l'arrondissement où l'association a son siège, tous les changements survenus dans l'administration ou la direction de l'association.
-          <br/>
-          Les registres de l'association et ses pièces de comptabilité sont présentés sans déplacement sur toute réquisition du ministre de l'Intérieur ou du préfet, à eux-mêmes ou à leur délégué ou à tout fonctionnaire accrédité à eux.
-        </p>
-        <br/>
-        <h4 class="left">
-          Article 26 - Règlement intérieur
-        </h4>
-        <p class="left">
-          Le règlement intérieur préparé par le conseil d'administration doit être adopté par l'assemblée générale.
-        </p>
-
-        <br/>
-        <h3 class="center">
-          Titre 7 : Dissolution - Liquidation
-        </h3>
-        <h4 class="left">
-          Article 27 - Dissolution
-        </h4>
-        <p class="left">
-          L'assemblée générale, appelée à se prononcer sur la dissolution de l'association et convoquée spécialement à cet effet, doit comprendre au moins la moitié plus un de ses membres en exercice.
-          <br/>
-          Si cette proposition n'est pas atteinte, l'assemblée est convoquée de nouveau, mais à quinze jours au moins d'intervalles, et cette fois, elle peut valablement délibérer quel que soit le nombre de membres présents.
-        </p>
-        <br/>
-        <h4 class="left">
-          Article 28 - Liquidation
-        </h4>
-        <p class="left">
-          En cas de dissolution, l'assemblée générale désigne un ou plusieurs commissaires chargés de la liquidation des biens de l'association. Elle attribue l'actif net à un ou plusieurs établissements analogues.
-        </p>
-
-        <br/>
-        <br/>
-
-        <p class="left">
-          Statuts modifiés selon les décisions de l'assemblée générale le 25 Juillet 2013. Adopté par l'assemblée générale du 15 Août 2013.
-        </p>
-
-
-      </div>
-      <div class="modal-footer">
-        <div class="right">
-          <button type="button" class="btn btn-modal" data-dismiss="modal">
-            Fermer
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Modal remerciements  -->
-<div class="modal bs-example-modal-lg fade" id="thanksTo" tabindex="-1" role="dialog" aria-labelledby="thanksToLabel" aria-hidden="true" data-backdrop="static" data-keyboard="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close white" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h2 class="modal-title center" id="thanksToLabel">
-          Remerciements
-        </h2>
-      </div>
-      <div class="modal-body">
-
-      </div>
-      <div class="modal-footer">
-        <div class="right">
-          <button type="button" class="btn btn-modal" data-dismiss="modal">
-            Fermer
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Modal FAQ  -->
-<div class="modal bs-example-modal-lg fade" id="FAQ" tabindex="-1" role="dialog" aria-labelledby="FAQLabel" aria-hidden="true" data-backdrop="static" data-keyboard="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close white" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h2 class="modal-title center" id="FAQLabel">
-          Foire aux questions
-        </h2>
-      </div>
-      <div class="modal-body">
-
-      </div>
-      <div class="modal-footer">
-        <div class="right">
-          <button type="button" class="btn btn-modal" data-dismiss="modal">
-            Fermer
-          </button>
-        </div>
+        <a href="" data-dismiss="modal">
+          <img src="" alt="Photo" class="carousel_photo" id="photo_in_carousel_toReplace"/>
+        </a>
       </div>
     </div>
   </div>
