--- a/app/Resources/views/index_base.html.twig
+++ b/app/Resources/views/index_base.html.twig
@@ -101,7 +101,7 @@
         <!-- END social -->
 
         <!-- BEGIN in_construction -->
-          {% include 'includes/in_construction.html.twig' %}
+          {# include 'includes/in_construction.html.twig' #}
         <!-- END in_construction -->
 
         <!-- BEGIN button -->
